; ModuleID = '/home/carl/AnghaBench/git/extr_http.c_get_accept_language.c'
source_filename = "/home/carl/AnghaBench/git/extr_http.c_get_accept_language.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i64 }

@cached_accept_language = common dso_local global i8* null, align 8
@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @get_accept_language to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_accept_language() #0 {
  %1 = alloca %struct.strbuf, align 8
  %2 = load i8*, i8** @cached_accept_language, align 8
  %3 = icmp ne i8* %2, null
  br i1 %3, label %13, label %4

4:                                                ; preds = %0
  %5 = bitcast %struct.strbuf* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %5, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %6 = call i32 @write_accept_language(%struct.strbuf* %1)
  %7 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %1, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp sgt i64 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %4
  %11 = call i8* @strbuf_detach(%struct.strbuf* %1, i32* null)
  store i8* %11, i8** @cached_accept_language, align 8
  br label %12

12:                                               ; preds = %10, %4
  br label %13

13:                                               ; preds = %12, %0
  %14 = load i8*, i8** @cached_accept_language, align 8
  ret i8* %14
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @write_accept_language(%struct.strbuf*) #2

declare dso_local i8* @strbuf_detach(%struct.strbuf*, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
